--- a/src/components/pages/LandingPage/SuccessReason/styles.module.scss
+++ b/src/components/pages/LandingPage/SuccessReason/styles.module.scss
@@ -49,4 +49,7 @@
     line-height: 140% !important;
     letter-spacing: -0.09px !important;
   }
+  &_speakerAvatar {
+    border-radius: 50%;
+  }
 }
