--- a/src/components/ui/text/styles.module.scss
+++ b/src/components/ui/text/styles.module.scss
@@ -154,6 +154,10 @@ $mobile-sizes: (
     font-weight: 400;
   }
 
+  &--weight-500 {
+    font-weight: 500;
+  }
+
   &--weight-600 {
     font-weight: 600;
   }
