--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ body > footer {
   --accent: #ffb300;
   --accent-hover: #ffe099;
   --accent-text: var(--bg);
-  --border: hsl(0, 0%, 20%);
+  --border: hsl(0, 0%, 30%);
   --preformatted: #ccc;
   --disabled: #111;
 }
@@ -87,38 +87,6 @@ body > * {
   grid-column: 2;
 }
 
-/* Make the header bg full width, but the content inline with body */
-body > header {
-  padding: 0.5rem 0;
-  grid-column: 1 / span 3;
-  display: grid;
-  grid-template-columns: subgrid;
-
-  background-color: black;
-  color: var(--text);
-
-  > * {
-    grid-column: 2;
-    grid-row: 1;
-  }
-
-  h2 {
-    margin: 0;
-    font-weight: 300;
-  }
-
-  nav ul {
-    margin: 0 auto;
-  }
-
-  img {
-    width: 2rem;
-    height: 2rem;
-    margin: 0 2px;
-  }
-}
-
-/* Add a little padding to ensure spacing is correct between content and header nav */
 main {
   padding: 4rem 0;
 
@@ -289,25 +257,59 @@ input:enabled:focus-visible:where(
 }
 
 /* Format navigation */
-header nav {
-  font-size: 1rem;
-  line-height: 2;
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
+body > header {
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 0;
 
-/* Use flexbox to allow items to wrap, as needed */
-header nav ul {
-  align-content: space-around;
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style-type: none;
-  gap: 1rem;
-  margin: 0;
-  padding: 0;
+  grid-column: 1 / span 3;
+  display: grid;
+  grid-template-columns: subgrid;
+
+  color: var(--text);
+  background-color: black;
+  box-shadow: 0 0 0.2rem #0000001a, 0 0.2rem 0.4rem #0003;
+
+  > * {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  nav {
+    font-size: 1rem;
+    line-height: 2;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+
+    img {
+      width: 2rem;
+      height: 2rem;
+      margin: auto 2px;
+    }
+
+    div {
+      display: flex;
+      flex-direction: row;
+    }
+
+    h2 {
+      margin: 0;
+      font-weight: 300;
+    }
+
+    ul {
+      margin: 0 auto;
+      align-content: space-around;
+      align-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      list-style-type: none;
+      gap: 1rem;
+      padding: 0;
+    }
+  }
 }
 
 /* List items are inline elements, make them behave more like blocks */
@@ -338,18 +340,18 @@ header nav a[aria-current="true"] {
 
 /* Reduce nav side on mobile */
 @media only screen and (max-width: 850px) {
-  header nav {
-    gap: 0.5rem;
+  body > header nav {
+    gap: 0.25rem;
 
     ul {
-      gap: 0.5rem;
+      gap: 0.25rem;
     }
 
     a {
       padding: 0 0.5rem;
     }
 
-    h2 span,
+    h2,
     #stars {
       display: none;
     }
@@ -531,9 +533,7 @@ select:not([multiple]) {
   background-image: linear-gradient(45deg, transparent 49%, var(--text) 51%),
     linear-gradient(135deg, var(--text) 51%, transparent 49%);
   background-position: calc(100% - 15px), calc(100% - 10px);
-  background-size:
-    5px 5px,
-    5px 5px;
+  background-size: 5px 5px, 5px 5px;
   background-repeat: no-repeat;
   padding-inline-end: 25px;
 }
@@ -685,7 +685,9 @@ samp {
   font-family: var(--mono-font);
 }
 
-code {
+code.hljs {
+  max-width: 70ch;
+  background-color: black;
   border-radius: var(--standard-border-radius);
   font-family: var(--mono-font);
   font-size: 0.9rem;
@@ -733,6 +735,7 @@ progress:indeterminate::-moz-progress-bar {
 
 dialog {
   background-color: var(--bg);
+  color: var(--text);
   max-width: 40rem;
   margin: auto;
 }
@@ -786,7 +789,7 @@ div.notice p:last-of-type {
   display: flex;
   gap: 2rem;
   justify-content: space-around;
-  color: var(--text-light);
+  font-size: 0.9rem;
 
   > div {
     display: flex;
@@ -794,11 +797,16 @@ div.notice p:last-of-type {
   }
 }
 
-span.group {
+div.group {
   display: inline-flex;
   flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: space-around;
+  gap: 2rem;
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 nav.tabs {
