--- a/public/style.css
+++ b/public/style.css
@@ -8,12 +8,14 @@
 /* Global variables. */
 :root {
   /* Set sans-serif & mono fonts */
-  --sans-font: plex, -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
+  --sans-font:
+    plex, -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
     "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI", Arial, Helvetica,
     "Helvetica Neue", sans-serif;
   --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   --standard-border-radius: 5px;
   --border-width: 1px;
+  --text-width: 35rem;
 }
 
 /* Dark theme */
@@ -23,30 +25,36 @@ body > footer {
   color-scheme: dark;
   --bg: #212121;
   --accent-bg: #2b2b2b;
+  --strong-bg: black;
   --text: white;
   --text-light: #ababab;
   --accent: #ffb300;
   --accent-hover: #ffe099;
   --accent-text: var(--bg);
-  --border: hsl(0, 0%, 30%);
+  --overlay: blue;
+  --border: hsl(0, 0%, 40%);
   --preformatted: #ccc;
   --disabled: #111;
+  --img-themer: invert() hue-rotate(180deg) brightness(1.5);
 }
 
 /* Light theme */
 @media (prefers-color-scheme: light) {
   :root {
-    --bg: #fff;
+    --bg: white;
     --accent-bg: #f5f7ff;
+    --strong-bg: white;
     --text: black;
     --text-light: hsl(0, 0%, 50%);
     --accent: #c48900;
     --accent-hover: #feb200;
     --accent-text: var(--bg);
-    --border: hsl(0, 0%, 80%);
+    --overlay: blue;
+    --border: hsl(0, 0%, 70%);
     --preformatted: #444;
     --marked: #ffdd33;
     --disabled: #efefef;
+    --img-themer: none;
   }
 }
 
@@ -75,20 +83,28 @@ html {
 
 /* Make the body a nice central block */
 body {
-  color: var(--text);
+  display: grid;
+  grid-template-columns: 1fr min(75ch, 90%) 1fr;
+  margin: 0;
+
   background-color: var(--bg);
+  color: var(--text);
   font-size: 1.15rem;
   line-height: 1.5;
-  display: grid;
-  grid-template-columns: 1fr min(70ch, 90%) 1fr;
-  margin: 0;
 }
 body > * {
   grid-column: 2;
 }
 
 main {
+  grid-column: 1 / span 3;
   padding: 4rem 0;
+  display: grid;
+  grid-template-columns: subgrid;
+  
+  > * {
+    grid-column: 2;
+  }
 
   > article:first-of-type > h3 {
     font-weight: 300;
@@ -143,6 +159,7 @@ h6 {
 }
 
 p {
+  max-width: var(--text-width);
   margin: 0 0 1.5rem 0;
 }
 
@@ -173,8 +190,12 @@ h6 {
   font-weight: 500;
 }
 
-/* Reduce header size on mobile */
+/* Reduce header size and spacing on mobile */
 @media only screen and (max-width: 720px) {
+  main {
+    padding: 0 0 4rem 0;
+  }
+
   h1 {
     font-size: 2.5rem;
   }
@@ -260,6 +281,7 @@ input:enabled:focus-visible:where(
 body > header {
   position: sticky;
   top: 0;
+  z-index: 10;
   padding: 0.5rem 0;
 
   grid-column: 1 / span 3;
@@ -268,7 +290,9 @@ body > header {
 
   color: var(--text);
   background-color: black;
-  box-shadow: 0 0 0.2rem #0000001a, 0 0.2rem 0.4rem #0003;
+  box-shadow:
+    0 0 0.2rem #0000001a,
+    0 0.2rem 0.4rem #0003;
 
   > * {
     grid-column: 2;
@@ -401,10 +425,6 @@ dialog {
   margin-bottom: 1rem;
 }
 
-section {
-  margin: 0 0 4rem 0;
-}
-
 /* Don't double separators when chaining sections */
 section + section,
 section:first-child {
@@ -442,6 +462,10 @@ article {
   }
 }
 
+aside {
+  overflow-x: auto;
+}
+
 details {
   padding: 0.7rem 1rem;
 }
@@ -468,30 +492,50 @@ details[open] > :last-child {
 
 /* Format tables */
 table {
+  width: 100%;
   border-collapse: collapse;
-  margin: 1.5rem 0;
+  font-size: 0.9rem;
 }
 
-figure > table {
-  width: max-content;
-  margin: 0;
+tbody {
+  border: calc(2 * var(--border-width)) solid var(--border);
 }
 
-td,
-th {
+td {
+  padding: 0.125rem 0.5rem;
+  border-left: var(--border-width) solid var(--border);
+  border-right: var(--border-width) solid var(--border);
+  transition:
+    color 1s,
+    background-color 1s;
+
+  &:has(.target) {
+    background-color: var(--accent);
+
+    * {
+      color: var(--bg);
+    }
+  }
+}
+
+td[colspan="3"],
+td[colspan="4"],
+td[colspan="5"] {
   border: var(--border-width) solid var(--border);
-  text-align: start;
-  padding: 0.5rem;
+  text-align: center;
 }
 
 th {
-  background-color: var(--accent-bg);
+  padding: 0.125rem 0.5rem;
   font-weight: bold;
+  border: var(--border-width) solid var(--border);
 }
 
-tr:nth-child(even) {
-  /* Set every other cell slightly darker. Improves readability. */
-  background-color: var(--accent-bg);
+th.side {
+  padding: 0.5rem 0.125rem;
+  border-color: transparent var(--border) var(--border) transparent;
+  writing-mode: vertical-lr;
+  text-orientation: mixed;
 }
 
 table caption {
@@ -530,10 +574,13 @@ textarea:not([cols]) {
 
 /* Add arrow to drop-down */
 select:not([multiple]) {
-  background-image: linear-gradient(45deg, transparent 49%, var(--text) 51%),
+  background-image:
+    linear-gradient(45deg, transparent 49%, var(--text) 51%),
     linear-gradient(135deg, var(--text) 51%, transparent 49%);
   background-position: calc(100% - 15px), calc(100% - 10px);
-  background-size: 5px 5px, 5px 5px;
+  background-size:
+    5px 5px,
+    5px 5px;
   background-repeat: no-repeat;
   padding-inline-end: 25px;
 }
@@ -580,7 +627,7 @@ input[type="checkbox"]:checked::after {
 }
 input[type="radio"]:checked::after {
   /* creates a colored circle for the checked radio button  */
-  content: " ";
+  content: "";
   width: 0.3em;
   height: 0.3em;
   border-radius: 100%;
@@ -686,7 +733,7 @@ samp {
 }
 
 code.hljs {
-  max-width: 70ch;
+  max-width: var(--text-width);
   background-color: black;
   border-radius: var(--standard-border-radius);
   font-family: var(--mono-font);
@@ -785,6 +832,26 @@ div.notice p:last-of-type {
 }
 
 /* Layouts */
+.starters {
+  max-width: 55ch;
+  display: flex;
+  justify-content: space-around;
+  gap: 1rem;
+
+  div {
+    flex: 1;
+    max-width: 15ch;
+    gap: 0.5rem;
+  }
+
+  a,
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .lists {
   display: flex;
   gap: 2rem;
@@ -797,47 +864,128 @@ div.notice p:last-of-type {
   }
 }
 
-div.group {
+#community {
   display: inline-flex;
   flex-wrap: wrap;
   gap: 2rem;
-
-  > div {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-}
-
-nav.tabs {
-  display: flex;
-  gap: 2px;
+  font-size: 0.9rem;
 
   a {
-    padding: 0 1rem;
-    border-bottom: 2px solid var(--border);
-    color: var(--text);
-  }
-
-  a.target {
-    border-bottom: 2px solid var(--accent);
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
   }
 }
 
-nav.tabs,
-p.details {
-  padding: 0 1rem;
-}
 
-p.details {
-  display: none;
+section.bar {
+  grid-column: 2 / span 2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
 
-  &.target {
-    display: inherit;
+  > * {
+    margin-right: 1rem;
   }
 }
 
-.doc-page {
+.overview {
+  width: 100%;
+  max-width: var(--text-width);
+  margin: 0 0 1rem 0;
+  overflow-x: auto;
+}
+
+.stack {
+  position: relative;
+  flex: 1;
+  min-width: calc(0.5 * var(--text-width));
+  max-width: var(--text-width);
+  overflow-y: hidden;
+
   border: 1px solid var(--border);
-  box-shadow: 2px 2px 5px hsl(0, 0%, 85%);
+  box-shadow: 0 0 5px var(--border);
+
+  /* Page. */
+  > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    opacity: 0;
+    transition: opacity 0.5s;
+
+    background: var(--strong-bg);
+
+    &:first-child {
+      position: relative;
+    }
+
+    &.target {
+      opacity: 1;
+    }
+
+    /* Page header. */
+    > div {
+      min-height: 5rem;
+      padding: 1rem;
+      background-color: var(--accent);
+      font-size: 0.9rem;
+
+      span,
+      p {
+        display: none;
+        color: var(--bg);
+      }
+
+      span.target {
+        display: inherit;
+      }
+    }
+
+    &.target a {
+      opacity: 1;
+    }
+
+    /* Page overlay. */
+    svg {
+      polyline,
+      rect {
+        fill: none;
+        stroke: var(--accent);
+        stroke-width: 3px;
+      }
+
+      .halo {
+        filter: drop-shadow(0 0 4px var(--bg)) drop-shadow(0 0 4px var(--bg))
+          drop-shadow(0 0 4px var(--bg)) drop-shadow(0 0 4px var(--bg));
+      }
+
+      circle,
+      path {
+        fill: var(--accent);
+        stroke: none;
+      }
+
+      line {
+        stroke: var(--accent);
+        stroke-width: 2px;
+        stroke-dasharray: 2 2;
+      }
+
+      g {
+        opacity: 0;
+        transition: opacity 1s;
+
+        &.target {
+          opacity: 1;
+        }
+      }
+
+      image {
+        filter: var(--img-themer);
+      }
+    }
+  }
 }
