--- a/public/style.css
+++ b/public/style.css
@@ -85,6 +85,7 @@ html {
 body {
   display: grid;
   grid-template-columns: 1fr min(75ch, 90%) 1fr;
+  align-content: flex-start;
   margin: 0;
 
   background-color: var(--bg);
@@ -101,7 +102,7 @@ main {
   padding: 4rem 0;
   display: grid;
   grid-template-columns: subgrid;
-  
+
   > * {
     grid-column: 2;
   }
@@ -160,11 +161,22 @@ h6 {
 
 p {
   max-width: var(--text-width);
-  margin: 0 0 1.5rem 0;
+  margin: 0 0 1rem 0;
 }
 
 b {
   font-weight: 600;
+}
+
+ol,
+ul {
+  padding: 0;
+  margin: 0;
+  padding-inline-start: 2rem;
+}
+
+ul {
+  list-style-type: square;
 }
 
 /* Prevent long strings from overflowing container */
@@ -337,6 +349,10 @@ body > header {
 }
 
 /* List items are inline elements, make them behave more like blocks */
+header {
+  height: fit-content;
+}
+
 header nav ul li {
   display: inline-block;
 }
@@ -389,7 +405,7 @@ header nav a.primary {
 }
 
 header nav a.chat {
-  margin-left: calc(-1 * var(--standard-border-radius));
+  margin-left: calc(-2 * var(--standard-border-radius));
   background: var(--bg);
   border-radius: 0 var(--standard-border-radius) var(--standard-border-radius) 0;
   border-color: var(--accent);
@@ -408,6 +424,106 @@ header nav a:has(img) {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Navigation dropdown menu */
+header nav details {
+  position: relative;
+  padding: 0;
+  margin: 0;
+
+  summary {
+    padding: 0 1rem;
+    margin: 0;
+
+    color: var(--text);
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: normal;
+
+    background: transparent;
+    border: var(--border-width) solid var(--border);
+    border-radius: var(--standard-border-radius);
+
+    cursor: pointer;
+    list-style: none;
+    user-select: none;
+  }
+
+  summary:hover {
+    background: var(--bg);
+    border-color: var(--accent);
+    color: var(--accent);
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
+
+  summary::after {
+    content: "›";
+    margin-left: 0.5rem;
+    display: inline-block;
+    transform: rotate(90deg);
+    transition: transform 0.5s;
+  }
+
+  &[open] summary {
+    margin: 0;
+
+    &::after {
+      transform: rotate(-90deg);
+    }
+  }
+
+  /* Show dropdown on hover */
+  &:hover summary::after {
+    transform: rotate(-90deg);
+  }
+
+  ul {
+    position: absolute;
+    top: calc(100% + 1.5rem);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+    background: var(--strong-bg);
+    border: var(--border-width) solid var(--border);
+    border-radius: var(--standard-border-radius);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.75);
+
+    flex-direction: column;
+    gap: 0;
+
+    li {
+      display: block;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+
+      a {
+        display: block;
+        padding: 0.5rem 1rem;
+        margin: 0;
+        border: none;
+        border-radius: 0;
+        color: var(--text);
+        text-decoration: none;
+      }
+
+      a:hover {
+        background: var(--accent-bg);
+        color: var(--accent);
+      }
+    }
+  }
+}
+
+/* Account for header when scrolling to linked elements. */
+*[id] {
+  scroll-margin: 4rem;
 }
 
 /* Consolidate box styling */
@@ -493,6 +609,7 @@ details[open] > :last-child {
 /* Format tables */
 table {
   width: 100%;
+  margin-bottom: 1rem;
   border-collapse: collapse;
   font-size: 0.9rem;
 }
@@ -502,7 +619,7 @@ tbody {
 }
 
 td {
-  padding: 0.125rem 0.5rem;
+  padding: 0.25rem 0.5rem;
   border-left: var(--border-width) solid var(--border);
   border-right: var(--border-width) solid var(--border);
   transition:
@@ -526,13 +643,13 @@ td[colspan="5"] {
 }
 
 th {
-  padding: 0.125rem 0.5rem;
+  padding: 0.5rem 0.25rem;
   font-weight: bold;
   border: var(--border-width) solid var(--border);
 }
 
 th.side {
-  padding: 0.5rem 0.125rem;
+  padding: 0.25rem 0.125rem;
   border-color: transparent var(--border) var(--border) transparent;
   writing-mode: vertical-lr;
   text-orientation: mixed;
@@ -660,10 +777,9 @@ input[type="file"] {
 
 /* Misc body elements */
 hr {
-  border: none;
+  margin: 1rem 0;
   height: var(--border-width);
   background: var(--border);
-  margin: 1rem auto;
 }
 
 mark {
@@ -724,21 +840,23 @@ dt {
   color: var(--text-light);
 }
 
-/* Use mono font for code elements */
+/* Code-like elements */
 pre,
 pre span,
 kbd,
 samp {
   font-family: var(--mono-font);
-  white-space: normal;
 }
 
 code.hljs {
   max-width: var(--text-width);
+  padding: 1rem;
+
   background-color: black;
   border-radius: var(--standard-border-radius);
   font-family: var(--mono-font);
   font-size: 0.9rem;
+  white-space: pre-line;
 }
 
 kbd {
@@ -878,7 +996,6 @@ div.notice p:last-of-type {
   }
 }
 
-
 section.bar {
   grid-column: 2 / span 2;
   display: flex;
@@ -989,4 +1106,10 @@ section.bar {
       }
     }
   }
+}
+
+/* Markdown rendering. */
+.emojione {
+  width: 1em;
+  height: 1em;
 }
